FWF-3422:[Bugfix]-visibe focus indicator for <a> tag, input and secondary button.

--- a/forms-flow-theme/scss/_button.scss
+++ b/forms-flow-theme/scss/_button.scss
@@ -128,7 +128,18 @@ text-decoration: underline;
 .btn-light:focus-visible,
 .btn-light:focus,
 .btn-outline-primary:focus-visible,
-.btn-outline-primary:focus {
-    outline: 3px solid $gray-100 !important;
+.btn-outline-primary:focus,
+.a.focus-visible,
+.a:focus,
+.input.form-visible,
+.input:focus,
+.form-control.form-visible,
+.form-control:focus,
+.form-check-input.form-visible,
+.form-check-input:focus,
+.btn-secondary.form-visible,
+.btn-secondary:focus {
+  outline: 3px solid $gray-100 !important;
 }
+
 
